# movable

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
_fixtures/c/: hello.c.json
_fixtures/java/: hello.java.json
_fixtures/yaml/: c.yaml  charj.yaml
docs/: refs.md
docs/adr/: 0001-dsl-design.md  0002-typo-to-antlr.md  0003-template-syntax.md  README.md
docs/dsl/: keywords.md
docs/languages/: README.md  go.md  javascript.md  jvm.md
parser/: Cargo.toml
parser/src/: lib.rs  movable.lalrpop  parse_tree.rs  parser.rs  token.rs
poc/: README.md  c.moa  demo.tg  design.md  movable.g4
reader/: Cargo.toml
reader/src/: lib.rs  retoken.rs  scie_code_file.rs  scie_token_element.rs
reader/src/domain/: delimiter.rs  lang_builtin.rs  mod.rs
reader/src/simple_hir/: mod.rs  sir_program.rs  sirs.rs
reader/src/transpiler/: c_transpiler.rs  java_transpiler.rs  mod.rs
src/: main.rs  reader.rs
src/domain/: delimiter.rs  lang_default.rs  mod.rs  type_alias.rs
src/reader/: code_file.rs  mod.rs  token_element.rs
typography/: Cargo.toml
typography/src/: error.rs  lexer.rs  lib.rs  location.rs  parse_tree.rs  parser.rs  token.rs  typography.lalrpop
