[package]
name = "movable"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"
serde_yaml = "0.8"

# string to enum
strum = "0.20"
strum_macros = "0.20"

[workspace]
members = [
    'typography',
    'parser'
]