[package]
name = "typography"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
unicode-xid = "0.2.0"

lalrpop-util = "0.19.1"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies.lalrpop]
version = "0.19.1"
features = ["lexer"]
